# checkpl

./: CHANGELOG.md  README.md  pyproject.toml  tmpclaude-94ab-cwd
.context/log/: README.md
.context/log/v0.0.1/: 1__setup.md  2__errors.md  2__errors.py  3__verify.md  3__verify.py  4__predicate__is_uniq.md
.context/log/v0.2/: 1__rename.md  1__setup.md  2__errors.md  2__errors.py  3__verify.md  3__verify.py  4__predicate__is_uniq.md  4__predicate__is_uniq.py  5__deployment.md
.context/prd/: v0.0.1.md
src/assert_polars/: __init__.py  errors.py
src/assert_polars/core/: __init__.py  hello.py  verify.py
src/assert_polars/predicates/: __init__.py  is_uniq.py
src/checkpl/: __init__.py  errors.py
src/checkpl/core/: __init__.py  verify.py
src/checkpl/predicates/: __init__.py  is_uniq.py  not_null.py
tests/: __init__.py  test_checks.py  test_predicate_is_uniq.py  test_verify.py
