[project]
name = "checkpl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ran li", email = "ranli2011@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.37.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]
